Part 1 of ETHREEOH-581 "Visual improvements: Invite view" - 2. Centre-align arrow betweeen "Search for People" and "Invite Users". - 4. Change menu bar stroke weight to 1px and apply correct colour value (See invite visual spec) - 5. Remove white stripe - 7. Increase left-margin by 11px (20px total). Reduce component width ("Search for People" and "Add external users") by the same amount if necessary. - 8. Change background colour of "Add external users" component to #fbfbfb. - 9. Change stroke style of "Add external users" component from solid to dashed (1px). - 10. Increase right-margin by 11px (20px total). Reduce component width ("Invite Users") by same amount if necessary.
git-svn-id: https://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@17012 7033f55c-6c29-4ad8-afba-765cb616e738

--- a/root/projects/slingshot/source/web/components/invite/invitationlist.css
+++ b/root/projects/slingshot/source/web/components/invite/invitationlist.css
@@ -36,9 +36,10 @@
 {
    border-bottom: 1px dashed #d9d9d9;
 }
-.invitationlist .inviteelist table .yui-dt-empty
+.invitationlist .inviteelist table tr td.yui-dt-empty
 {
-   background-color: #fff;
+   background-color: inherit;
+   border-bottom: none;   
 }
 
 .invitationlist .inviteelist .user
@@ -100,7 +101,7 @@
 .invitationlistwrapper
 {
 	background: transparent url(images/green-arrow.png) no-repeat left 15%;
-	margin: 24px 0 10px 0;
+	margin: 1em 0 0;
 	padding-left: 50px;
 }
 
