--- a/root/projects/slingshot/source/web/components/invite/members-bar.css
+++ b/root/projects/slingshot/source/web/components/invite/members-bar.css
@@ -1,7 +1,7 @@
 .members-bar
 {
    background-color: #e9edef;
-   border-bottom: 2px solid #c7ccce;
+   border-bottom: 1px solid #c7ccce;
    clear: left;
    margin: 0 -10px 1px;
    min-height: 1.2em;
