--- a/root/projects/slingshot/source/web/components/people-finder/people-finder.css
+++ b/root/projects/slingshot/source/web/components/people-finder/people-finder.css
@@ -1,7 +1,7 @@
 .people-finder
 {
    color: #000;
-   margin: 24px 10px 10px;
+   margin: 1em 0 0;
 }
 
 .people-finder.list
